сделал три блока

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a class="menu__phone" href="tel:+79284396350">+7 928 43-96-350</a>
+                <a class="menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
             </div>
             <div class="header__inner">
                 <div class="header__text">
@@ -333,63 +333,6 @@
                 </div>
             </div>
         </section>
-        <section class="brands">
-            <div class="container">
-                <h3 class="brands__title title">Ремонтируем бренды</h3>
-                <div class="brands__inner">
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/xiaomi.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/apple.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/huawei.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/honor.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/meizu.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/samsung.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/nokia.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/lenovo.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/sony.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/asus.png" alt="">
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
         <section class="reviews">
             <h3 class="brands__title title">Реальные отзывы</h3>
             <div class="container">
@@ -453,9 +396,154 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
+
+        <section class="actions">
+            <div class="container">
+                <h3 class="brands__title title">Актуальные акции</h3>
+                <div class="actions__slider">
+
+                    <div class="actions__slider-item">
+                        <a class="actions__slider-link" href="#">
+                            <img class="actions__slider-image" src="images/slider/action-slider.jpg" alt="">
+                        </a>
+                    </div>
+                    </a>
+
+                    <div class="actions__slider-item">
+                        <a class="actions__slider-link" href="#">
+                            <img class="actions__slider-image" src="images/slider/action-slider.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="actions__slider-item">
+                        <a class="actions__slider-link" href="#">
+                            <img class="actions__slider-image" src="images/slider/action-slider.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="brands">
+            <div class="container">
+                <h3 class="brands__title title">Ремонтируем бренды</h3>
+                <div class="brands__inner">
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/xiaomi.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/apple.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/huawei.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/honor.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/meizu.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/samsung.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/nokia.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/lenovo.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/sony.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="#">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/asus.png" alt="">
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+
+        <!--     <section class="call-master">
+            <div class="container">
+                <div class="call-master__inner">
+                    <div class="call-master__columns">
+                        <p class="call-master__title"></p>
+                    </div>
+                    <div class="call-master__columns"></div>
+                </div>
+            </div>
+        </section> -->
+        <section class="contacts">
+            <div class="container">
+                <div class="contacts__inner">
+                    <h3 class="brands__title title">мы на карте</h3>
+                    <div class="contacts__top">
+                        <div class="contacts__top-phone"></div>
+                        <div class="contacts__top-adress"></div>
+                        <div class="contacts__top-working"></div>
+                    </div>
+                    <div class="contacts__map">
+                        <iframe class="contacts__map--frame" src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=36672680032" width="1224" height="400" frameborder="0"></iframe>
+                    </div>
+                    <p class="contacts__text">Сервисный центр доктор гаджет осуществляет ремонт телефонов любого бренда и модификации. Выполняем восстановление мобильных гаджетов с различными повреждениями и программными сбоями срочно по оптимальным ценам. Мастера центра обладают
+                        высокой квалификацией для того, чтобы починить неработающую технику. При этом не важно, в каком она состоянии и насколько сложным окажется процесс восстановления.
+                    </p>
+                    <p class="contacts__text">Осуществляя ремонт мобильных телефонов, мы стремимся предельно оперативно устранить проблему, минимизировав тем самым финансовые расходы клиента и время ожидания. Затрачивая минимум времени, чтобы отремонтировать сотовый, пользователь
+                        сможет быстро восстановить контакт с окружающими, получив в свое распоряжение полностью исправное коммуникационное устройство.
+                    </p>
+                    <p class="contacts__text">
+                        Выполняя ремонт сотовых телефонов, наши мастера отлично осознают то, насколько важна данная техника для своего владельца. Ведь современный смартфон – это не только эффективный инструмент для общения и бизнеса, но и уникальные программные приложения в
+                        сочетании с неограниченным доступом к информации.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__inner">
+                    <div class="footer__adress adress">
+                        <div class="adress__inner">
+                            <img class="adress__logo" src="/images/logo.png" alt="">
+                            <p class="adress__slogan">Ремонт смартфонов в Краснодаре</p>
+                        </div>
+                        <div class="adress__inner">
+                            <a class="adress__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
+                            <div class="adress__time-work">Пн-Сб: с 10 до 19, Вс: Выходной</div>
+                        </div>
+                        <div class="adress__inner">
+                            <span class="adress__city">г.Краснодар</span>
+                            <p class="adress__adress">2-я Целиноградская ул., 13</p>
+                        </div>
+                    </div>
+                    <div class="footer__text">
+                        <p class="adress__text">
+                            Цокольный этаж ОПИСАНИЕ КАК ДОБРАТСЯ, НА КАКОЙ ОСТАНВКЕ ВЫХОДИТЬ НА КАКОЙ МАРШРУТУКЕ ЕХАТЬ И ТД
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
 
 
