--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <div class="header__top">
-                <a class="logo" href="#"><img src="images/logo.png" width="210px" height="32px" alt="Ремонт телефонов доктор гаджет"></a>
+                <a class="logo" href="#"><img src="images/logo.png" width="250px" height="60px" alt="Ремонт телефонов доктор гаджет"></a>
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item">
@@ -37,10 +37,10 @@
             </div>
             <div class="header__inner">
                 <div class="header__text">
-                    <h1 class="header__title">Мы чиним любые телефоны
+                    <h1 class="header__title">Ремонт телефонов в Краснодаре
                     </h1>
                     <p class="header__subtitle">
-                        Починим Ваш телефон в Краснодаре
+                        Ваш телефон починит Доктор Гаджет
                     </p>
                     <a class="header__btn" href="tel:+79284396350">Позвонить нам</a>
                 </div>
@@ -401,7 +401,7 @@
 
         <section class="actions">
             <div class="container">
-                <h3 class="brands__title title">Актуальные акции</h3>
+                <h3 class="actions__title title">Актуальные акции</h3>
                 <div class="actions__slider">
 
                     <div class="actions__slider-item">
@@ -535,6 +535,26 @@
                             <span class="adress__city">г.Краснодар</span>
                             <p class="adress__adress">2-я Целиноградская ул., 13</p>
                         </div>
+                    </div>
+                    <div class="footer__menu">
+                        <p class="footer__menu-title">Доктор Гаджет</p>
+                        <ul class="footer__menu-list">
+                            <div class="footer__menu-item">
+                                <a class="footer__menu-link" href="#">Главная</a>
+                            </div>
+                            <div class="footer__menu-item">
+                                <a class="footer__menu-link" href="#">Поломки</a>
+                            </div>
+                            <div class="footer__menu-item">
+                                <a class="footer__menu-link" href="#">Бренды</a>
+                            </div>
+                            <div class="footer__menu-item">
+                                <a class="footer__menu-link" href="#">Акции</a>
+                            </div>
+                            <div class="footer__menu-item">
+                                <a class="footer__menu-link" href="#">Контакты</a>
+                            </div>
+                        </ul>
                     </div>
                     <div class="footer__text">
                         <p class="adress__text">
