пофиксил блок ремонтируем поломки

--- a/app/index.html
+++ b/app/index.html
@@ -52,20 +52,20 @@
     </header>
     <main>
         <section class="slider-choice">
-            <div class="container-slider">
+            <div class="container">
                 <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
                 <div class="slider-choice__inner">
                     <div class="slider-choice__item ">
                         <div class="slider-choice__item-inner">
                             <img class="slider-choice__item-icon" src="images/icons/time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Качество и скорость работы</h5>
+                            <h5 class="slider-choice__item-title item__title">Скорость работы</h5>
                             <p class="slider-choice__item-text">Время ремонта в нашем сервисном центре занимает от 30 минут</p>
                         </div>
                     </div>
                     <div class="slider-choice__item ">
                         <div class="slider-choice__item-inner">
                             <img class="slider-choice__item-icon" src="images/icons/dollar.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Доступная стоимость работы</h5>
+                            <h5 class="slider-choice__item-title item__title">Стоимость работы</h5>
                             <p class="slider-choice__item-text">Стоимоть работ нижу конкурентов, экономим средства клиентов</p>
                         </div>
                     </div>
@@ -371,54 +371,54 @@
             <div class="container">
                 <h3 class="brands__title title">Ремонтируем бренды</h3>
                 <div class="brands__inner">
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="xiaomi.html">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/xiaomi.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="iphone.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="huawei.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/apple.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/huawei.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="samsung.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/honor.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/meizu.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/samsung.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/nokia.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/lenovo.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/sony.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/asus.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
                         </div>
                     </a>
                 </div>
