--- a/app/xiaomi.html
+++ b/app/xiaomi.html
@@ -42,10 +42,10 @@
             <div class="container">
                 <div class="breaking-page__inner">
                     <div class="breaking-page__image-inner">
-                        <img class="breaking-page__image" alt="" src="images/breaking-page/screen.jpg">
+                        <img class="breaking-page__image" alt="" src="images/brands/phones/xiaomi.jpg">
                     </div>
                     <div class="breaking-page__box">
-                        <div class="breaking-page__title">Замена сенсора телефона</div>
+                        <div class="breaking-page__title">Ремонт Xiaomi в Краснодаре</div>
                         <div class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</div>
 
                         <div class="breaking-page__box-inner">
@@ -67,100 +67,117 @@
                 </div>
             </div>
         </section>
-        <section class="description">
-            <h3 class="description__title title">ЗАМЕНА ЭКРАНА ТЕЛЕФОНА В КРАСНОДАРЕ</h3>
+        <section class="price">
             <div class="container">
-                <p class="description__text">
-                    Ваш телефон может упасть, его могут придавить, нечаянно сесть. При ношение телефона в сумке на него может упасть тяжелый или острый предмет, который поцарапает или продавит экран. При ношении телефона в карманах, он так же может получить повреждения,
-                    к примеру связка ключей рядом или какой-нибудь другой мелкий предмет может серьезно повредить экран телефона. Приносите его к нам, наши мастера проведут диагностику, и отремнтируют ваш телефон.
-                </p>
-            </div>
-        </section>
-        <section class="brands">
-            <div class="container">
-                <h3 class="brands__title title">Выберите бренд</h3>
-                <div class="brands__inner">
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/xiaomi.png" alt="">
-                        </div>
+                <h3 class="slider-choice__title title">цены на ремонт телефонов Xiaomi </h3>
+                <div class="price__inner">
+                    <div class="price__inner-title">
+                        <p class="price__item-title price__item-title--name">Наименование услуги</p>
+                        <p class="price__item-title price__item-title--time">Время работы</p>
+                        <p class="price__item-title price__item-title--price">Стоимость</p>
+                        <p class="price__item-title price__item-title--link">Починить</p>
+                    </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Диагностика Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/apple.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена задней крышки Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">500</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/huawei.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена дисплея Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/honor.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена стекла дисплея Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/meizu.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена тачскрина Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/samsung.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена сенсора Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/nokia.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена аккумулятора Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/lenovo.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена динамиков Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/sony.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Чистка сетки динамиков Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/asus.png" alt="">
-                        </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена микрофона Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена разъёма Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена камеры Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт кнопки включения Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт кнопок громкости Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена контроллера питания Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт платы Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
                 </div>
             </div>
         </section>
-        <section class="repair">
-            <div class="container">
-                <div class="repair__inner">
-                    <div class="repair__columns">
-                        <h5 class="repair__columns-title item__title">Связаться с нами:</h5>
-                        <p class="repair__columns-text">
-                            Заполните форму и мы сразу Вам перезвоним. Так же можете самостоятельно связаться с нами, позвонив по номеру телефона:
-                        </p>
-                        <a class="repair__columns-phone menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
-                        <p class="repair__columns-text">
-                            Ждем Ваших заявок и звонков!
-                        </p>
-                    </div>
-                    <!--  <div class="repair__columns">
-                        <img class="repair__columns-image" src="images/repair-phone.png" alt="" width="443px" height="268px">
-                    </div> -->
-                    <div class="repair__columns-form">
-                        <h5 class="repair__columns-title item__title">Заполните форму:</h5>
-                        <form action="# " method="get " enctype="multipart/form-data ">
-                            <input type="text " name="user-name " placeholder="Как вас зовут " tabindex="1">
-                            <input type="tel " name="user-phone " placeholder="Ваш телефон " tabindex="2">
-                            <button class="repair__columns-btn" type="submit ">Оставить заявку</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="slider-choice">
+
+        <!--  <section class="slider-choice">
             <div class="container-slider">
                 <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
                 <div class="slider-choice__inner">
@@ -201,7 +218,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
 
@@ -288,7 +305,6 @@
         </footer>
     </main>
     <script src="js/main.min.js"></script>
-
 </body>
 
 </html>
